refactor(): update the content of the web page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        
     </head>
 
     <body>
@@ -57,7 +58,6 @@
                             <li><a href="#accueil" class="nav-item">Accueil</a></li>
                             <li><a href="#profil" class="nav-item">Profil</a></li>
                             <li><a href="#formation" class="nav-item">Formation</a></li>
-                            <li><a href="#competence" class="nav-item">Compétence</a></li>
                             <li><a href="#projets" class="nav-item">Réalisation</a></li>
                             <li><a href="#contact" class="nav-item">Contact</a></li>
                         </ul>
@@ -66,14 +66,14 @@
             </div>
         </nav>
 
-        <!-- Page d'accueil -->
+        <!-- Home page -->
         <header id="accueil">
             <div class="home-banner">
                 <div class="banner-content">
                     <h1 class="banner-title">Mochel Anthony</h1>
                     <h2 class="banner-subtitle">Etudiant en développement informatique</h2>
                     <div>
-                        <a class="btn button-social btn-lg" href="https://github.com/TonyMochel" target="_blank">
+                        <a class="btn button-social btn-lg" href="https://github.com/tonybloc" target="_blank">
                             <i class="fa fa-github fa-1g" aria-hidden="true"></i> Github
                         </a>
                         <a class="btn button-social btn-lg" href="https://www.linkedin.com/in/anthony-mochel-75aa48150/" target="_blank">
@@ -87,7 +87,7 @@
             </div>
         </header>
 
-        <!-- Présentation du profil -->
+        <!-- Profil Introduction -->
         <section id="profil">
             <h3>Qui suis-je?</h3>
             <div class="container" id="about-me">
@@ -97,26 +97,19 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
                         <div>
-                            <h3>MOCHEL Anthony, 20 ans</h3>
+                            <h3>MOCHEL Anthony, 22 ans</h3>
                             <h4>Etudiant en Informatique</h4>
                             <p>
-                                Je prépare actuellement un diplôme de BTS informatique spécialisé dans le développement d'applications et de logiciels.
-                                Passionné par la programmation et les nouvelles technologies, j'aime découvrir et apprendre au fur et à mesure de projets que j'entreprends.
-                                Ces pour cela que j'ai conçus ce site web, il me permettra de vous présenter l'ensemble des projets personnels comme professionnels que j'ai réalisés.
-                                Se site web fera office de CV en ligne.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et molestiae eum, quos mollitia, quam vero ipsum iusto voluptatem, tenetur id nisi corrupti eaque blanditiis illum similique minus dolorem voluptates delectus.
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, voluptate numquam. Possimus distinctio, culpa adipisci ratione unde, consequuntur officia quo veritatis quam velit praesentium, quas rem porro? Dolorum, aspernatur quae?
                             </p>
                         </div>
                     </div>
                 </div>
-                <div style="text-align:center;">
-                    <a class="btn button-download btn-lg" href="./documents/cv_mochel_2017.pdf" target="_blank">
-                        <i class="fa fa-download" aria-hidden="true"></i> Télécharger CV
-                    </a>
-                </div>
             </div>
         </section>
 
-        <!-- Présentation des formations -->
+        <!-- Background -->
         <section id="formation" >
             <h3>Mon parcours</h3>
             <div class="container">
@@ -131,9 +124,9 @@
                                 <p>En préparation</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">BTS Services Informatiques Aux Organisations</p>
-                                <p class="graduation-school">Lycée René Cassin, Strasbourg</p>
-                                <p class="graduation-description">BTS SIO option SLAM (Solutions Logicielles et Applications Métiers). 1er de la promotion (année 2016 - 2017)</p>
+                                <p class="graduation-title">ITII - Ingénieur Informatique</p>
+                                <p class="graduation-school">Centre de formation (CFAI), Strasbourg</p>
+                                <p class="graduation-description">Formation en alternance. En paternaria avec le Concervatoir National des Arts et Métier - CNAM du Grand Est</p>
                             </div>
                         </div>
                         <div class="graduation">
@@ -141,12 +134,12 @@
                                 <div class="icon_area">
                                     <i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>
                                 </div>
-                                <p>2015 - 2016</p>
+                                <p>2016-2018</p>
                             </div>
                             <div class="graduation-content">
-                                <p class="graduation-title">DUT Informatique (1ère année)</p>
-                                <p class="graduation-school">IUT Robert Schuman, Strasbourg</p>
-                                <p class="graduation-description">Réorientation en fin d'année vers un BTS SIO</p>
+                                <p class="graduation-title">BTS Services Informatiques Aux Organisations</p>
+                                <p class="graduation-school">Lycée René Cassin, Strasbourg</p>
+                                <p class="graduation-description">Spécialité : Solutions Logicielles et Applications Métiers (SLAM)</p>
                             </div>
                         </div>
                         <div class="graduation">
@@ -159,7 +152,7 @@
                             <div class="graduation-content">
                                 <p class="graduation-title">BAC Sciences et Technologies de l'Industrie et du Développement Durable</p>
                                 <p class="graduation-school">Lycée Louis Couffignal, Strasbourg</p>
-                                <p class="graduation-description">BAC technologique STI2D option Systèmes d'Information et Numérique, mention AB.</p>
+                                <p class="graduation-description">Spécialité : Systèmes d'Information et Numérique (SIN) </p>
                             </div>
                         </div>
                     </div>
@@ -170,11 +163,37 @@
                                 <div class="icon_area">
                                     <i class="fa fa-briefcase fa-lg" aria-hidden="true"></i>
                                 </div>
-                                <p>Juin - Juillet 2017</p>
+                                <p>2018-2021</p>
+                            </div>
+                            <div class="graduation-content">
+                                <p class="graduation-title">Talent Business Solution - Eckbolsheim (67)</p>
+                                <p class="graduation-school">Stage en alternance</p>
+                                <p class="graduation-description">Consultant / Developpeur</p>
+                            </div>
+                        </div>
+                        <div class="graduation">
+                            <div class="graduation-date">
+                                <div class="icon_area">
+                                    <i class="fa fa-briefcase fa-lg" aria-hidden="true"></i>
+                                </div>
+                                <p>Janvier 2018</p>
+                            </div>
+                            <div class="graduation-content">
+                                <p class="graduation-title">Viwametal - Oswald (67)</p>
+                                <p class="graduation-school">Stage 2ème année BTS</p>
+                                <p class="graduation-description">Développement PHP - Refonte du dashboard de l'entreprise.</p>
+                            </div>
+                        </div>
+                        <div class="graduation">
+                            <div class="graduation-date">
+                                <div class="icon_area">
+                                    <i class="fa fa-briefcase fa-lg" aria-hidden="true"></i>
+                                </div>
+                                <p>Juin 2017</p>
                             </div>
                             <div class="graduation-content">
                                 <p class="graduation-title">Electricté de Strasbourg - Mundolsheim (67)</p>
-                                <p class="graduation-school">Stage 1ère année BTS SIO</p>
+                                <p class="graduation-school">Stage 1ère année BTS</p>
                                 <p class="graduation-description">Développement PHP - Automatisation du traitement des indicateurs trimestriels de performance des prestataires TMA.</p>
                             </div>
                         </div>
@@ -183,7 +202,7 @@
                                 <div class="icon_area">
                                     <i class="fa fa-briefcase fa-lg" aria-hidden="true"></i>
                                 </div>
-                                <p>Juillet - Août 2016</p>
+                                <p>Juillet 2016</p>
                             </div>
                             <div class="graduation-content">
                                 <p class="graduation-title">Electricté de Strasbourg - Mundolsheim (67)</p>
@@ -196,46 +215,7 @@
             </div>
         </section>
 
-        <!-- Présentation des compétences -->
-        <section id="competence">
-            <h3>Mes compétences</h3>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                        <div class="category-skills">
-                            <h3 class="category-skills-title"> Techniques </h3>
-                            <p class="intituler">Langages de programmation :</p>
-                            <p class="skills">JAVA, PHP, JavaScript, HTML, CSS, Python, Windev</p>
-                            <p class="intituler">Gestion de base de données :</p>
-                            <p class="skills">Microsoft SQL server, MySQL server</p>
-                            <p class="intituler">Modélisation de données :</p>
-                            <p class="skills">UML, MCD, MLD, MLR</p>
-                            <p class="intituler">Frameworks :</p>
-                            <p class="skills">Bootstrap et Materialize</p>
-                            <p class="intituler">CMS déjà utilisés :</p>
-                            <p class="skills">Joomla et WordPress</p>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                        <div class="category-skills">
-                            <h3 class="category-skills-title"> Logiciels </h3>
-                            <p class="intituler">Modélisation de base de données :</p>
-                            <p class="skills">PowerAMC </p>
-                            <p class="intituler">Editeurs de code :</p>
-                            <p class="skills">Atom et Eclipse</p>
-                            <p class="intituler">Versioning :</p>
-                            <p class="skills">Git </p>
-                            <p class="intituler">Travail collaboratif :</p>
-                            <p class="skills">Google Suite, Github, Trello</p>
-                            <p class="intituler">Gestion de projet :</p>
-                            <p class="skills">Méthode agile </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Présentation des projets -->
+        <!-- Projets -->
         <section id="projets">
             <h3>Mes Réalisations</h3>
             <div class="container">
@@ -327,31 +307,22 @@
             </div>
         </section>
 
-        <!-- Recommandations -->
-
-
-        <!-- Page de contacte -->
+        <!-- Contact -->
         <section id="contact">
             <h3>Me contacter</h3>
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <!-- Coordonnée -->
+                        <!-- Location -->
                         <div class="category_contact" >
                             <h3 class="category-title">Coordonnées</h3>
                             <div class="category_content">
                                 <address class="adresse">
                                     <div class="adr-category">
                                         <div class="icon_small_area"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-                                        <p>Plobsheim, France</p>
+                                        <p>Strasbourg, France</p>
                                     </div>
-									<!--
-                                    <div class="adr-category">
-                                        <div class="icon_small_area"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                                        <p>+(33)6.06.98.50.87</p>
-                                    </div>
-									-->
-                                    <div class="adr-category">
+									<div class="adr-category">
                                         <div class="icon_small_area"><i class="fa fa-envelope" aria-hidden="true"></i></div>
                                         <p>contact@tonymochel.top</p>
                                     </div>
@@ -359,86 +330,26 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                        <!-- Formulaire de contacte -->
-                        <div class="category_contact">
-                            <h3 class="category-title">Formulaire de contacte</h3>
-                            <div class="category_content">
-                                <!-- Formulaire -->
-                                <form id="form_contact" method="post" action="#">
-                                    <table>
-                                        <tbody>
-                                            <tr>
-                                                <td colspan="1">
-                                                    <input type="text" id="nom" name="nom" class="input inp_firstName" placeholder="Nom"/>
-                                                </td>
-                                                <td colspan="1">
-                                                    <input type="text" id="prenom" name="prenom" class="input inp_lastName" placeholder="Prénom"/>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="2"><input type="email" id="email" name="email" class="input inp_email" placeholder="Email (exemple@domaine.fr)"/></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="2"><textarea id="message" class="input inp_message" name="message" placeholder="Ecrivez votre message (le système de contact n'est pas encore fonctionnel)"></textarea></td>
-                                            </tr>
-                                            <tr>
-                                                <td colspan="1"><button type="submit" id="btnEnvoi" class="btn button-send"><i class="fa fa-paper-plane"  aria-hidden="true"></i> Envoyer</button></td>
-                                            </tr>
-                                        <tbody>
-                                    </table>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- Bas de page -->
+        <!-- Footer -->
         <footer>
             <section class="pre_footer">
                 <div class="container">
-                    <p>Mochel Anthony, dernière modification le 02/11/2017</p>
+                    <p>Mochel Anthony, dernière modification le 27/03/2019</p>
                 </div>
             </section>
         </footer>
 
 
-        <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <!-- JQuery Validate -->
-        <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-        <!-- Bootstrap -->
         <script src="asset/bootstrap/js/bootstrap.min.js"></script>
 
-        <script>
-        // Validation des champs de formulaires
+        <script type="text/javascript">
         $(function(){
-                $.validator.setDefaults({
-                    errorClass: 'form_error',
-                    errorElement: 'span'
-                });
-
-                $("#form_contact").validate({
-                    rules : {
-                        nom     : {required: true},
-                        prenom  : {required: true},
-                        email   : {required: true, email: true},
-                        message :{required: true}
-                    },
-                    messages : {
-                        nom     : {required : "Vous avez oublié votre nom !"},
-                        prenom  : {required : "Vous avez oublié votre prénom !"},
-                        email   : {
-                            required : "Vous avez oublié votre email !",
-                            email : "L'adresse email est invalide"
-                        },
-                        message :{required : "Votre message est vide !"}
-                    }
-                });
-            });
-
+                
             // Animation de la navigation
             $(function(){
                 $(document).ready(function(){
