--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        
+
     </head>
 
     <body>
@@ -62,7 +62,7 @@
                             <li><a href="#contact" class="nav-item">Contact</a></li>
                         </ul>
                     </div>
-                </div>
+                </div>re
             </div>
         </nav>
 
@@ -100,9 +100,7 @@
                             <h3>MOCHEL Anthony, 22 ans</h3>
                             <h4>Etudiant en Informatique</h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et molestiae eum, quos mollitia, quam vero ipsum iusto voluptatem, tenetur id nisi corrupti eaque blanditiis illum similique minus dolorem voluptates delectus.
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, voluptate numquam. Possimus distinctio, culpa adipisci ratione unde, consequuntur officia quo veritatis quam velit praesentium, quas rem porro? Dolorum, aspernatur quae?
-                            </p>
+                                Passionné par la programmation et les nouvelles technologies, j'aime découvrir et apprendre au fur et à mesure de projets que j'entreprends. Ces pour cela que j'ai conçus ce site web, il me permettra de vous présenter l'ensemble des projets personnels comme professionnels que j'ai réalisés. Se site web fera office de CV en ligne</p>
                         </div>
                     </div>
                 </div>
