refactor(): update external links

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                         <a class="btn button-social btn-lg" href="https://github.com/tonybloc" target="_blank">
                             <i class="fa fa-github fa-1g" aria-hidden="true"></i> Github
                         </a>
-                        <a class="btn button-social btn-lg" href="https://www.linkedin.com/in/anthony-mochel-75aa48150/" target="_blank">
+                        <a class="btn button-social btn-lg" href="www.linkedin.com/in/mochel-anthony" target="_blank">
                             <i class="fa fa-linkedin fa-1g" aria-hidden="true"></i> Linkedin
                         </a>
-                        <a class="btn button-social btn-lg" href="https://www.freecodecamp.org/tonymochel" target="_blank">
-                            <i class="fa fa-free-code-camp fa-1g" aria-hidden="true"></i> FreeCodeCamp
+                        <a class="btn button-social btn-lg" href="https://gitlab.com/TonyMochel" target="_blank">
+                            <i class="fa fa-gitlab fa-1g" aria-hidden="true"></i> GitLab
                         </a>
                     </div>
                 </div>
