--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a class="btn button-social btn-lg" href="https://github.com/tonybloc" target="_blank">
                             <i class="fa fa-github fa-1g" aria-hidden="true"></i> Github
                         </a>
-                        <a class="btn button-social btn-lg" href="www.linkedin.com/in/mochel-anthony" target="_blank">
+                        <a class="btn button-social btn-lg" href="https://www.linkedin.com/in/mochel-anthony" target="_blank">
                             <i class="fa fa-linkedin fa-1g" aria-hidden="true"></i> Linkedin
                         </a>
                         <a class="btn button-social btn-lg" href="https://gitlab.com/TonyMochel" target="_blank">
