build(*): retrive last version of web site

--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
         <script src="asset/bootstrap/js/bootstrap.min.js"></script>
 
         <!-- Firebase credential -->
-        <!-- <script src="asset/script/firebase.js"></script> -->
+        <script src="asset/script/firebase.js"></script>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <!-- <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script> -->
+        <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-app.js"></script>
         <!-- Firebase products SDKs that you want to use -->
-        <!-- <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-analytics.js"></script> -->
+        <script src="https://www.gstatic.com/firebasejs/7.13.0/firebase-analytics.js"></script>
 
         <script src="asset/script/navigation.js"></script>
     </body>
